单例模式-》序列号和反序列化破坏解析

--- a/src/main/java/com/algorithm/learn/DesignPattern/SingleTon/01面试官看完我手写的单例直接惊呆了.md
+++ b/src/main/java/com/algorithm/learn/DesignPattern/SingleTon/01面试官看完我手写的单例直接惊呆了.md
@@ -159,7 +159,7 @@ public class TestDCL {
         return null;
     }
 }
-复制代码
+
 ```
 
 可以发现，我把单例对象序列化之后，再反序列化之后得到的对象，和之前已经不是同一个对象了。因此，就破坏了单例。
@@ -198,7 +198,7 @@ public class TestDCL {
 
 应该是有可能的。所以，来到我们写的方法 `getFromFile`中，找到这一行`ois.readObject()`。它就是从流中读取对象的方法。
 
-
+#### [***]ois.readObject()
 
 ![img](01面试官看完我手写的单例直接惊呆了.assets/20200924221435.png)
 
@@ -206,35 +206,23 @@ public class TestDCL {
 
 点进去，查看 `ObjectInputStream.readObject 方法`，然后找到 `readObject0()方法`
 
-
-
 ![img](01面试官看完我手写的单例直接惊呆了.assets/20200924221439.png)
-
-
 
 再点进去，我们发现有一个 switch 判断，找到 TC_OBJECT 分支。它是用来处理对象类型。
 
-
-
 ![img](01面试官看完我手写的单例直接惊呆了.assets/20200924221442.png)
-
-
 
 然后看到有一个 `readOrdinaryObject方法`，点进去。
 
-
-
 ![img](01面试官看完我手写的单例直接惊呆了.assets/20200924221455.png)
 
-
-
-然后找到这一行，`isInstantiable()` 方法，用来判断对象是否可实例化。
-
-
+然后找到这一行，`isInstantiable()` 方法，用来判断对象是否可实例化。【重点看注释！】
 
 ![img](01面试官看完我手写的单例直接惊呆了.assets/20200924221521.png)
 
 
+
+【通过注释：cons在该对象是可以序列化的时候，是不为空的，所以，返回为true】
 
 由于 cons 构造函数不为空，所以这个方法返回 true。因此构造出来一个 非空的 obj 对象 。
 
@@ -275,8 +263,6 @@ public class TestDCL {
 
 
 ![img](01面试官看完我手写的单例直接惊呆了.assets/20200924221537.png)
-
-
 
 
 
@@ -328,7 +314,7 @@ public class Singleton implements Serializable {
         return singleton;
     }
 }
-复制代码
+
 ```
 
 另外，不知道细心的读者有没有发现，在看源码中 switch 分支有一个 `case TC_ENUM` 分支。这里，是对枚举类型进行的处理。
