--- a/src/main/java/com/algorithm/learn/DesignPattern/SingleTon/02单例模式总结-参考视频.md
+++ b/src/main/java/com/algorithm/learn/DesignPattern/SingleTon/02单例模式总结-参考视频.md
@@ -210,3 +210,62 @@ public class Test {
 
 
 
+
+
+# 二、饿加载
+
+# 三、各种破坏强化
+
+## 1.序列化和非序列化破坏和修复
+
+### 1.1 解决方法：参考
+
+![1601637366799](02单例模式总结-参考视频.assets/1601637366799.png)
+
+### 参考视频：[链接](https://pan.baidu.com/disk/home#/all?vmode=list&path=%2F%E5%A4%A7%E6%95%B0%E6%8D%AE%2F%EF%BC%88%E5%B7%B2%E7%9C%8B%EF%BC%89java%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F%E7%B2%BE%E8%AE%B2%20Debug%20%E6%96%B9%E5%BC%8F%2B%E5%86%85%E5%AD%98%E5%88%86%E6%9E%90%E3%80%90%E8%A7%86%E9%A2%91%E3%80%91%2F%E7%AC%AC8%E7%AB%A0%20%E5%8D%95%E5%88%97%E6%A8%A1%E5%BC%8F%E8%AE%B2%E8%A7%A3%EF%BC%8Bcoding%2B%E6%BA%90%E7%A0%81%E8%A7%A3%E6%9E%90)
+
+![1601637501506](02单例模式总结-参考视频.assets/1601637501506.png)
+
+
+
+### 1.2 代码
+
+```java
+public class Singleton implements Serializable {
+
+    //注意，此变量需要用volatile修饰以防止指令重排序
+    private static volatile Singleton singleton = null;
+
+    private Singleton(){
+        if(singleton != null){
+            throw new RuntimeException("Can not do this");
+        }
+    }
+
+    public static Singleton getInstance(){
+        //进入方法内，先判断实例是否为空，以确定是否需要进入同步代码块
+        if(singleton == null){
+            synchronized (Singleton.class){
+                //进入同步代码块时再次判断实例是否为空
+                if(singleton == null){
+                    singleton = new Singleton();
+                }
+            }
+        }
+        return singleton;
+    }
+
+    // 定义readResolve方法，防止反序列化返回不同的对象
+    private Object readResolve(){
+        return singleton;
+    }
+}
+
+```
+
+### 1.3 总结
+
+视频讲解非常清晰！然后，理解了因为可以序列化，导致反射创建了一个新对象。解决方法，就是重写readResolve方法，然后，会在oos读取对象的时候，最后进入这个readResolve方法，直接返回已经创建好的单例对象，而不是通过反射创建的那个 对象！
+
+网页参考，可以当作参考
+
