--- a/src/main/java/com/algorithm/learn/DesignPattern/SingleTon/02单例模式总结-参考视频.md
+++ b/src/main/java/com/algorithm/learn/DesignPattern/SingleTon/02单例模式总结-参考视频.md
@@ -210,6 +210,20 @@ public class Test {
 
 
 
+## 2.基于枚举类实现的单例
+
+### 2.1 参考视频：
+
+https://pan.baidu.com/disk/home#/all?vmode=list&path=%2F%E5%A4%A7%E6%95%B0%E6%8D%AE%2F%EF%BC%88%E5%B7%B2%E7%9C%8B%EF%BC%89java%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F%E7%B2%BE%E8%AE%B2%20Debug%20%E6%96%B9%E5%BC%8F%2B%E5%86%85%E5%AD%98%E5%88%86%E6%9E%90%E3%80%90%E8%A7%86%E9%A2%91%E3%80%91%2F%E7%AC%AC8%E7%AB%A0%20%E5%8D%95%E5%88%97%E6%A8%A1%E5%BC%8F%E8%AE%B2%E8%A7%A3%EF%BC%8Bcoding%2B%E6%BA%90%E7%A0%81%E8%A7%A3%E6%9E%90
+
+### 2.2 参考文章
+
+[关于Enum枚举单例模式的实现](https://blog.csdn.net/ls0111/article/details/80136215)
+
+
+
+3.3 总结文章
+
 
 
 # 二、饿加载
