单例：枚举总结

--- a/src/main/java/com/algorithm/learn/DesignPattern/SingleTon/02单例模式总结-参考视频.md
+++ b/src/main/java/com/algorithm/learn/DesignPattern/SingleTon/02单例模式总结-参考视频.md
@@ -222,7 +222,15 @@ https://pan.baidu.com/disk/home#/all?vmode=list&path=%2F%E5%A4%A7%E6%95%B0%E6%8D
 
 
 
-3.3 总结文章
+### 3.3 总结文章
+
+[03单例模式-枚举.md](https://github.com/RayBreslinwcl/algorithm/blob/master/src/main/java/com/algorithm/learn/DesignPattern/SingleTon/03%E5%8D%95%E4%BE%8B%E6%A8%A1%E5%BC%8F-%E6%9E%9A%E4%B8%BE.md)
+
+
+
+### 3.4 相关代码
+
+https://github.com/RayBreslinwcl/algorithm/tree/master/src/main/java/com/algorithm/learn/DesignPattern/SingleTon/enumSingle
 
 
 
