主要是23中设计模式

--- a/src/main/java/com/algorithm/learn/DesignPattern/Base/参考.md
+++ b/src/main/java/com/algorithm/learn/DesignPattern/Base/参考.md
@@ -2,5 +2,7 @@
 
 ## 2.参考github项目
 
-### [图说设计模式](https://github.com/me115/design_patterns)
+### （1）[图说设计模式](https://github.com/me115/design_patterns)
+
+### （2）[Java 23种*设**计**模**式*全归纳](https://github.com/youlookwhat/DesignPattern)
 
