类关系的记忆

--- a/src/main/java/com/algorithm/learn/DesignPattern/Base/参考.md
+++ b/src/main/java/com/algorithm/learn/DesignPattern/Base/参考.md
@@ -6,3 +6,5 @@
 
 ### （2）[Java 23种*设**计**模**式*全归纳](https://github.com/youlookwhat/DesignPattern)
 
+### （3）[设计模式（在线版本）](http://c.biancheng.net/view/1351.html)
+
