--- a/src/main/java/com/algorithm/interviewPlan/202111/01-面试算法规划记录.md
+++ b/src/main/java/com/algorithm/interviewPlan/202111/01-面试算法规划记录.md
@@ -6,55 +6,55 @@
 
 # 二、算法练习记录
 
-| 算法                                                  | 路径                                          | 日期       | 总次数 | 备注     |
-| ----------------------------------------------------- | --------------------------------------------- | ---------- | ------ | -------- |
-| 快排                                                  |                                               | 20211130_1 | 1      |          |
-| 归并                                                  |                                               | 20211130_1 | 1      |          |
-| 输入一个链表，按链表从尾到头的顺序返回一个ArrayList。 | com.algorithm.learn.Leetcode._01offer.offer03 | 20211130_1 | 1      | 递归、栈 |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
-|                                                       |                                               |            |        |          |
+| 算法                                                  | 路径                                          | 日期       | 总次数 | 备注             |
+| ----------------------------------------------------- | --------------------------------------------- | ---------- | ------ | ---------------- |
+| 快排                                                  |                                               | 20211130_1 | 1      |                  |
+| 归并                                                  |                                               | 20211130_1 | 1      |                  |
+| 输入一个链表，按链表从尾到头的顺序返回一个ArrayList。 | com.algorithm.learn.Leetcode._01offer.offer03 | 20211130_1 | 1      | 递归、栈         |
+| 调增数组顺序使奇数位于偶数前面                        | com.algorithm.learn.Leetcode._01offer.offer13 | 20211130_1 | 1      | 难写，细节多练习 |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
+|                                                       |                                               |            |        |                  |
 
