--- a/src/main/java/com/algorithm/interviewPlan/202111/01-面试算法规划记录.md
+++ b/src/main/java/com/algorithm/interviewPlan/202111/01-面试算法规划记录.md
@@ -6,55 +6,55 @@
 
 # 二、算法练习记录
 
-| 算法                                                  | 路径                                          | 日期       | 总次数 | 备注             |
-| ----------------------------------------------------- | --------------------------------------------- | ---------- | ------ | ---------------- |
-| 快排                                                  |                                               | 20211130_1 | 1      |                  |
-| 归并                                                  |                                               | 20211130_1 | 1      |                  |
-| 输入一个链表，按链表从尾到头的顺序返回一个ArrayList。 | com.algorithm.learn.Leetcode._01offer.offer03 | 20211130_1 | 1      | 递归、栈         |
-| 调增数组顺序使奇数位于偶数前面                        | com.algorithm.learn.Leetcode._01offer.offer13 | 20211130_1 | 1      | 难写，细节多练习 |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
-|                                                       |                                               |            |        |                  |
+| 算法                                                         |                             路径                             | 日期       | 总次数 | 备注                                 |
+| ------------------------------------------------------------ | :----------------------------------------------------------: | ---------- | ------ | ------------------------------------ |
+| 快排                                                         |                                                              | 20211130_1 | 1      |                                      |
+| 归并                                                         |                                                              | 20211130_1 | 1      |                                      |
+| 输入一个链表，按链表从尾到头的顺序返回一个ArrayList。        |        com.algorithm.learn.Leetcode._01offer.offer03         | 20211130_1 | 1      | 递归、栈                             |
+| 调增数组顺序使奇数位于偶数前面                               |        com.algorithm.learn.Leetcode._01offer.offer13         | 20211130_1 | 1      | 难写，细节多练习                     |
+| 输入一个链表，反转链表后，输出新链表的表头。                 |        com.algorithm.learn.Leetcode._01offer.offer15         | 20211201_1 | 1      |                                      |
+| 2个链表合成后的链表                                          |        com.algorithm.learn.Leetcode._01offer.offer16         | 20211201_1 | 1      |                                      |
+| 输入两棵二叉树A，B，判断B是不是A的子结构。                   |        com.algorithm.learn.Leetcode._01offer.offer17         | 20211201_1 | 1      |                                      |
+| 操作给定的二叉树，将其变换为源二叉树的镜像                   |        com.algorithm.learn.Leetcode._01offer.offer18         | 20211201_1 | 1      |                                      |
+| 从上往下打印出二叉树的每个节点，同层节点从左至右打印。【层序遍历，需要练习】 |        com.algorithm.learn.Leetcode._01offer.offer22         | 20211201_1 | 1      |                                      |
+| 判断该数组是不是某二叉搜索树的后序遍历的结果                 |        com.algorithm.learn.Leetcode._01offer.offer23         | 20211201_1 | 1      |                                      |
+| 二叉树中和为某一值的路径                                     |        com.algorithm.learn.Leetcode._01offer.offer24         | 20211201_1 | 1      | 这个是之前面试kyline的第三道算法题目 |
+|                                                              | com.algorithm.learn.Leetcode._01offer.tree.tree_34_find_path | 20211201_1 | 1      | 有思维图解                           |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
+|                                                              |                                                              |            |        |                                      |
 
