找路径算法

--- a/src/main/java/com/algorithm/interviewPlan/202111/01-面试算法规划记录.md
+++ b/src/main/java/com/algorithm/interviewPlan/202111/01-面试算法规划记录.md
@@ -20,8 +20,8 @@
 | 判断该数组是不是某二叉搜索树的后序遍历的结果                 |        com.algorithm.learn.Leetcode._01offer.offer23         | 20211201_1 | 1      |                                      |
 | 二叉树中和为某一值的路径                                     |        com.algorithm.learn.Leetcode._01offer.offer24         | 20211201_1 | 1      | 这个是之前面试kyline的第三道算法题目 |
 |                                                              | com.algorithm.learn.Leetcode._01offer.tree.tree_34_find_path | 20211201_1 | 1      | 有思维图解                           |
-|                                                              |                                                              |            |        |                                      |
-|                                                              |                                                              |            |        |                                      |
+| 输入一棵二叉树，求该树的深度。                               |   com.algorithm.learn.Leetcode._01offer.tree.tree_38_depth   | 20211201_1 | 1      | 【测试通过】                         |
+| 重建二叉树                                                   | com.algorithm.learn.Leetcode._01offer.tree.tree_04_reconstruct | 20211201_1 | 1      | 【课手写】                           |
 |                                                              |                                                              |            |        |                                      |
 |                                                              |                                                              |            |        |                                      |
 |                                                              |                                                              |            |        |                                      |
