第一批过完，后续第二批练习

--- a/src/main/java/com/algorithm/interviewPlan/202111/01-面试算法规划记录.md
+++ b/src/main/java/com/algorithm/interviewPlan/202111/01-面试算法规划记录.md
@@ -22,22 +22,22 @@
 |                                                              | com.algorithm.learn.Leetcode._01offer.tree.tree_34_find_path | 20211201_1 | 1      | 有思维图解                           |
 | 输入一棵二叉树，求该树的深度。                               |   com.algorithm.learn.Leetcode._01offer.tree.tree_38_depth   | 20211201_1 | 1      | 【测试通过】                         |
 | 重建二叉树                                                   | com.algorithm.learn.Leetcode._01offer.tree.tree_04_reconstruct | 20211201_1 | 1      | 【课手写】                           |
-|                                                              |                                                              |            |        |                                      |
-|                                                              |                                                              |            |        |                                      |
-|                                                              |                                                              |            |        |                                      |
-|                                                              |                                                              |            |        |                                      |
-|                                                              |                                                              |            |        |                                      |
-|                                                              |                                                              |            |        |                                      |
-|                                                              |                                                              |            |        |                                      |
-|                                                              |                                                              |            |        |                                      |
-|                                                              |                                                              |            |        |                                      |
-|                                                              |                                                              |            |        |                                      |
-|                                                              |                                                              |            |        |                                      |
-|                                                              |                                                              |            |        |                                      |
-|                                                              |                                                              |            |        |                                      |
-|                                                              |                                                              |            |        |                                      |
-|                                                              |                                                              |            |        |                                      |
-|                                                              |                                                              |            |        |                                      |
+| 复杂链表的复制                                               |        com.algorithm.learn.Leetcode._01offer.offer25         | 20211202_1 | 1      |                                      |
+| 最小的K个数                                                  |        com.algorithm.learn.Leetcode._01offer.offer29         | 20211202_1 | 1      | 【优先队列】                         |
+| 把数组排成最小的数                                           |        com.algorithm.learn.Leetcode._01offer.offer32         | 20211202_1 | 1      | Collections.sort                     |
+| 输入两个链表，找出它们的第一个公共结点。                     |        com.algorithm.learn.Leetcode._01offer.offer36         | 20211202_1 | 1      |                                      |
+| 二叉树的深度                                                 |        com.algorithm.learn.Leetcode._01offer.offer38         | 20211202_1 | 1      | 非递归-层序遍历【*】                 |
+| 数组中只出现一次的数字                                       |                                                              |            |        |                                      |
+| 左旋转字符串                                                 |        com.algorithm.learn.Leetcode._01offer.offer43         | 20211202_1 | 1      | 两种方法                             |
+| 约瑟夫环                                                     |        com.algorithm.learn.Leetcode._01offer.offer46         | 20211202_1 | 1      |                                      |
+| 把字符串转换成整数                                           |        com.algorithm.learn.Leetcode._01offer.offer49         | ======     |        |                                      |
+| 数组中重复的数字                                             |        com.algorithm.learn.Leetcode._01offer.offer50         | 20211202_1 | 1      |                                      |
+| 链表中环的入口结点                                           |        com.algorithm.learn.Leetcode._01offer.offer55         | 20211202_1 | 1      | [没有理解逻辑]                       |
+| 删除链表中重复的节点                                         |        com.algorithm.learn.Leetcode._01offer.offer56         | 20211202_1 | 1      |                                      |
+| 对称的二叉树                                                 |        com.algorithm.learn.Leetcode._01offer.offer58         | 20211202_1 | 1      | 【***】                              |
+| 按之字形顺序打印二叉树                                       |        com.algorithm.learn.Leetcode._01offer.offer59         | 20211202_1 | 1      | 【***】够爽                          |
+| 把二叉树打印成多行                                           |        com.algorithm.learn.Leetcode._01offer.offer60         | 20211202_1 | 1      |                                      |
+| 二叉搜索树的第k个结点                                        |        com.algorithm.learn.Leetcode._01offer.offer62         | 20211202_1 | 1      | [中序遍历]                           |
 |                                                              |                                                              |            |        |                                      |
 |                                                              |                                                              |            |        |                                      |
 |                                                              |                                                              |            |        |                                      |
