--- a/src/main/java/com/algorithm/interviewPlan/202111/01-面试算法规划记录.md
+++ b/src/main/java/com/algorithm/interviewPlan/202111/01-面试算法规划记录.md
@@ -9,7 +9,7 @@
 | 算法                                                         |                             路径                             | 日期                  | 总次数 | 备注                                 |
 | ------------------------------------------------------------ | :----------------------------------------------------------: | --------------------- | ------ | ------------------------------------ |
 | 快排                                                         |      com.algorithm.learn.sort.quicksort.quickSortClass       | 20211130_1,20220216_2 | 2      | 竟然忘了，需要复习                   |
-| 归并                                                         |                                                              | 20211130_1            | 1      |                                      |
+| 归并                                                         |      com.algorithm.learn.sort.mergesort.mergeSortClass       | 20211130_1,20220216_2 | 2      | 思路记着，需要复习                   |
 | 输入一个链表，按链表从尾到头的顺序返回一个ArrayList。        |        com.algorithm.learn.Leetcode._01offer.offer03         | 20211130_1            | 1      | 递归、栈                             |
 | 调增数组顺序使奇数位于偶数前面                               |        com.algorithm.learn.Leetcode._01offer.offer13         | 20211130_1            | 1      | 难写，细节多练习                     |
 | 输入一个链表，反转链表后，输出新链表的表头。                 |        com.algorithm.learn.Leetcode._01offer.offer15         | 20211201_1            | 1      |                                      |
@@ -38,7 +38,7 @@
 | 按之字形顺序打印二叉树                                       |        com.algorithm.learn.Leetcode._01offer.offer59         | 20211202_1            | 1      | 【***】够爽                          |
 | 把二叉树打印成多行                                           |        com.algorithm.learn.Leetcode._01offer.offer60         | 20211202_1            | 1      |                                      |
 | 二叉搜索树的第k个结点                                        |        com.algorithm.learn.Leetcode._01offer.offer62         | 20211202_1            | 1      | [中序遍历]                           |
-|                                                              |                                                              |                       |        |                                      |
+| 逆转链表                                                     |        com.algorithm.learn.Leetcode._01offer.offer15         | 20220216_1            | 1      |                                      |
 |                                                              |                                                              |                       |        |                                      |
 |                                                              |                                                              |                       |        |                                      |
 |                                                              |                                                              |                       |        |                                      |
